[metadata]
name = IXN-assembler
version = 0.0.1
author = Ajit Joglekar
lisence = MIT

classifiers =
    Framework :: napari
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires  = >= 3.8
install_requires =
    napari[all] >= 0.4.19
    numpy >= 1.26.4
    opencv-python >= 4.9.0
    tifffile >= 2024.2.12
    torch >= 2.3.0
    torchvision >= 0.18.0
    scikit-image >= 0.22.0
    qtpy >= 2.4.1
    pillow >= 10.3.0
    scipy >= 1.3.0
    timm >= 1.0.7
    pandas >= 2.2.2
    superqt >= 0.6.3
    btrack >= 0.6.5
    seaborn >= 0.13.2
    openpyxl >= 3.1.4

[options.entry_points]
napari.manifest =
    IXN-assembler = IXN_assembler:napari.yaml
