[metadata]
name = IXN-assembler
version = 0.0.1
author = Ajit Joglekar
lisence = MIT

classifiers =
    Framework :: napari
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir = 
    = IXN_assembler
include_package_data = True
python_requires  = >= 3.8
install_requires =
    napari[all] >= 0.4.19
    numpy >= 1.26.4
    opencv-python >= 4.9.0
    tifffile >= 2024.2.12
    qtpy >= 2.4.1
    pillow >= 10.3.0
    scipy >= 1.3.0
    pandas >= 2.2.2
    superqt >= 0.6.3
    openpyxl >= 3.1.4

[options.entry_points]
napari.manifest =
    IXN-assembler = IXN_assembler:napari.yaml

[options.packaege_data]
* = *.yaml