[metadata]
name = IXN-assembler
version = 0.0.1
author = Ajit Joglekar
lisence = MIT

classifiers =
    Framework :: napari
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = False
python_requires  = >= 3.8
install_requires =
    napari[all] >= 0.4.19
    numpy >= 1.26.4
    tifffile >= 2024.2.12

[options.entry_points]
napari.manifest =
    IXN-assembler = IXN_assembler:napari.yaml
